// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <FormSectionList /> should renders with all props correctly 1`] = `
<div
  className="form-group-section form-group-section-primary"
>
  <div
    className="form-group-section-heading"
  >
    <h3
      className="panel-title"
    >
      Test title
    </h3>
  </div>
  <div
    className="form-group-section-body"
  >
    <span
      className="FormSection-children"
    >
      FormSectionList children
    </span>
  </div>
</div>
`;

exports[`Component <FormSectionList /> should renders without title 1`] = `
<div
  className="form-group-section form-group-section-primary"
>
  <div
    className="form-group-section-body"
  >
    <span
      className="FormSection-children"
    >
      FormSectionList children
    </span>
  </div>
</div>
`;
